tests/spread/spread.exp
Error ------------------------------------------------------------ test10.js:3:2

Error: test10.js:3
  3: (o.p: empty); // error: number ~> empty
      ^^^ Cannot cast `o.p` to empty because number [1] is incompatible with empty [2].
  References:
    2: var o = { p: 0, ...x };
                    ^ [1]: number
    3: (o.p: empty); // error: number ~> empty
             ^^^^^ [2]: empty

Error ------------------------------------------------------------ test3.js:8:17

Error: test3.js:8
  8: var y: number = o.y;
                     ^^^ Cannot assign `o.y` to `y` because string [1] is incompatible with number [2].
  References:
    1: var p = { y: "" };
                    ^^ [1]: string
    8: var y: number = o.y;
              ^^^^^^ [2]: number

Error ------------------------------------------------------------ test3.js:9:17

Error: test3.js:9
  9: var z: number = o.z;
                     ^^^ Cannot assign `o.z` to `z` because string [1] is incompatible with number [2].
  References:
    2: var q = { z: "" };
                    ^^ [1]: string
    9: var z: number = o.z;
              ^^^^^^ [2]: number

Error ----------------------------------------------------------- test3.js:17:18

Error: test3.js:17
 17: var t: boolean = s.y; // error, string or number
                      ^^^ Cannot assign `s.y` to `t` because number [1] is incompatible with boolean [2].
  References:
   12: var r = { y: 123 };
                    ^^^ [1]: number
   17: var t: boolean = s.y; // error, string or number
              ^^^^^^^ [2]: boolean

Error ----------------------------------------------------------- test3.js:17:18

Error: test3.js:17
 17: var t: boolean = s.y; // error, string or number
                      ^^^ Cannot assign `s.y` to `t` because string [1] is incompatible with boolean [2].
  References:
    1: var p = { y: "" };
                    ^^ [1]: string
   17: var t: boolean = s.y; // error, string or number
              ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------ test6.js:10:2

Error: test6.js:10
 10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
      ^ Cannot cast `p` to object type because property `abc` is missing in object literal [1] but exists in object type [2].
  References:
               v
    7: var p = {
    8:   foo: 'bar'
    9: };
       ^ [1]: object literal
   10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
           ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]: object type

Error ------------------------------------------------------------- test7.js:6:6

Error: test7.js:6
  6:     ({...x}: void); // error, Object
          ^^^^^^ Cannot cast object literal to undefined because object literal [1] is incompatible with undefined [2].
  References:
    6:     ({...x}: void); // error, Object
            ^^^^^^ [1]: object literal
    6:     ({...x}: void); // error, Object
                    ^^^^ [2]: undefined

Error ------------------------------------------------------------- test8.js:7:2

Error: test8.js:7
  7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
      ^^^^^^^^ Cannot cast object literal to object type because in property `q`, string [1] is incompatible with number [2].
  References:
   12: type B = { q: string };
                     ^^^^^^ [1]: string
    7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
                                  ^^^^^^ [2]: number

Error ------------------------------------------------------------- test8.js:8:2

Error: test8.js:8
  8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
      ^^^^^^^^ Cannot cast object literal to object type because in property `p`, number [1] is incompatible with string [2].
  References:
   11: type A = { p: number };
                     ^^^^^^ [1]: number
    8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
                       ^^^^^^ [2]: string

Error ------------------------------------------------------------- test9.js:5:2

Error: test9.js:5
  5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
      ^^^^^^^^^^^^^ Cannot cast object literal to object type because a callable signature is missing in object literal [1] but exists in object type [2].
  References:
    5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
        ^^^^^^^^^^^^^ [1]: object literal
    5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
                       ^^^^^^^^^^^^^^^^ [2]: object type

Error ------------------------------------------------------------ test9.js:11:2

Error: test9.js:11
 11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
      ^^^^^^^^^^^^^^ Cannot cast object literal to object type because an indexer property is missing in object literal [1] but exists in object type [2].
  References:
   11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
        ^^^^^^^^^^^^^^ [1]: object literal
   11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
                        ^^^^^^^^^^^^^^^ [2]: object type

Error ------------------------------------------------------------ test9.js:12:2

Error: test9.js:12
 12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
      ^^^^^^^^^^^^^^ Cannot cast object literal to object type because an indexer property is missing in object literal [1] but exists in object type [2].
  References:
   12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
        ^^^^^^^^^^^^^^ [1]: object literal
   12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
                        ^^^^^^^^^^^^^^^^^ [2]: object type


Found 12 errors
